# CVok2DUniv

./: .gitattributes  .gitignore  generateTestRefs.bat  launchTests.bat
CVok2D/: .vimrc  .ycm_extra_conf.py  CMakeLists.txt
CVok2D/buggyLoops/: errorInput25418.txt  errorInput25447.txt  errorInput5604.txt  graph3983.txt
CVok2D/convexDecomp/: CMakeLists.txt  DebugDraw.h  DebugDraws.cpp  DebugDraws_World.cpp  Loop.cpp  TestConvexDecomp.cpp  acd.cpp  acd.h  acd_base.h  acd_debug.cpp  acd_loop.cpp  crashHandler.cpp  crashHandler.h
CVok2D/convexDecompCli/: CMakeLists.txt  convexDecompCli.cpp
CVok2D/convexDecompTest/: CMakeLists.txt  cdTest.cpp
CVok2D/convexDecompTestCases/: graph1.txt  graph1048.txt  graph10481.txt  graph21768.txt  graph24265.txt  graph2951.txt  graph5825.txt  out_graph1048.txt  out_graph10481.txt  out_graph19572.txt  out_graph21768.txt  out_graph23883.txt  out_graph28195.txt  out_graph3983.txt  out_graph5825.txt  testLists.txt
CVok2D/convexDecompTestbed/: CMakeLists.txt  DebugDraws.cpp  TestConvexDecomp.cpp  acd.cpp  acd.h  acd_base.h  acd_loop.cpp
CVok2D/convexDecompTests/: graph0.txt  graph1.txt  graph1048.txt  graph19572.txt  graph2.txt  graph21768.txt  graph23238.txt  graph23883.txt  graph28195.txt  graph3.txt  imgui.ini  listTests.ps1  out_graph0.txt  out_graph1.txt  out_graph1048.txt  out_graph10481.txt  out_graph19572.txt  out_graph2.txt  out_graph21768.txt  out_graph23238.txt  out_graph23883.txt  out_graph24265.txt  out_graph28195.txt  out_graph2951.txt  out_graph3.txt  out_graph3983.txt  out_graph5604.txt  out_graph5825.txt  testLists.txt
CVok2D/cvok2d/: CMakeLists.txt  cvok2d.h  cvok2dInit.cpp  cvok2dInit.h  cvok2dPCH.cpp  cvok2dPCH.h
CVok2D/cvok2d/collision/: GJK.cpp  GJK.h  SAT.cpp  SAT.h  cvCollisionDef.h  cvCollisionDispatch.cpp  cvCollisionDispatch.h  cvContact.h  cvDistance.cpp  cvDistance.h  cvManifold.cpp  cvManifold.h  cvNarrowPhase.cpp  cvNarrowPhase.h  cvQuery.h
CVok2D/cvok2d/core/: cvAabb.cpp  cvAabb.h  cvAabb.inl  cvColor.cpp  cvColor.h  cvCore.h  cvHandle.h  cvHashUtils.h  cvMat33.inl  cvMath.h  cvMathDefs.h  cvTransform.inl  cvVec.inl
CVok2D/cvok2d/core/collection/: cvFreeList.cpp  cvFreeList.h
CVok2D/cvok2d/dyanmic/: cvMotion.cpp  cvMotion.h
CVok2D/cvok2d/shape/: cvCircle.cpp  cvCircle.h  cvCollide.h  cvCompoundShape.cpp  cvCompoundShape.h  cvConvexShape.h  cvPolygonShape.cpp  cvPolygonShape.h  cvShape.h
CVok2D/cvok2d/simulation/: cvBody.cpp  cvBody.h  cvBodyManager.cpp  cvBodyManager.h  cvBroadPhaseSAP.cpp  cvBroadPhaseSAP.h  cvBroadphase.cpp  cvBroadphase.h  cvBroadphaseBruteForce.cpp  cvBroadphaseBruteForce.h  cvBroadphaseCinfo.cpp  cvCollisionAgent.h  cvISimulationControl.h  cvMotionManager.cpp  cvMotionManager.h  cvNPData.h  cvSimulationContext.h  cvSimulationControlSimple.cpp  cvSimulationControlSimple.h  cvWorld.cpp  cvWorld.h
CVok2D/cvok2d/solver/: cvConstraint.h  cvPGS.cpp  cvPGS.h  cvSolverBody.h  cvSolverManifold.h
CVok2D/cvok2d/world/: cvBody.cpp  cvBody.h  cvBodyManager.h  cvBroadPhaseSAP.cpp  cvBroadPhaseSAP.h  cvBroadphase.cpp  cvBroadphase.h  cvHandleDefs.h  cvMaterial.cpp  cvMaterial.h  cvMotionManager.cpp  cvMotionManager.h  cvWorld.cpp  cvWorld.h
CVok2D/cvok2dTestBed/: CMakeLists.txt  CVok2DTestBed.vcxproj  CVok2DTestBed.vcxproj.filters  CVok2DTestbed.cpp  DebugDraw.h  DebugDraws.cpp  DebugDraws_World.cpp  imgui.ini
CVok2D/cvok2dTestBed/imgui_gl3/: imgui_impl_glfw_gl3.cpp
CVok2D/cvok2dTestBed/testcases/: BasicTest.cpp  BasicTest.h  CompoundShape.cpp  CompoundShape.h  FrictionComparison.cpp  FrictionComparison.h  RollingFriction.cpp  Stacks.cpp  Stacks.h  TestBase.cpp  TestBase.h  TestCollisionDispatch.cpp  TestCollisionDispatch.h  TestDistance.cpp  TestDistance.h  TestFriction.cpp  TestFriction.h  WorldIntegration.cpp  WorldIntegration.h
CVok2D/unittest/: CMakeLists.txt  test_GJK.cpp  test_aabb.cpp  test_bodyOp.cpp  test_bp_sap.cpp  test_closestPt.cpp  test_collectin.cpp  test_cvVec.cpp  test_cvVec3.cpp  test_distance.cpp  test_hashable.cpp  test_init.cpp  test_mat33.cpp  test_math.cpp  test_mock_bp.cpp  test_motionbuffer.cpp  test_narrowphase.cpp  test_sat.cpp  test_shapes.cpp  test_simulation.cpp  test_world.cpp  test_world_bp.cpp  unittest.cpp  unittest.vcxproj  unittest.vcxproj.filters
